# grab-hackathon-2026

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-api-ec2.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  baseline.py  config.py  geometry.py  grab_client.py  main.py  polyline_flex.py  segmentation.py  trip_state.py
apps/api/app/comfort/: baseline.py  events.py  geometry.py  trip.py
apps/api/app/fixtures/: route_fixture.json
apps/api/app/grab/: client.py  places.py
apps/api/app/grab/fixtures/: route_fixture.json
apps/web/: next.config.ts  package.json
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/api/ride-ws-origin/: route.ts
apps/web/app/api/ride/[...path]/: route.ts
apps/web/components/: ComfortMap.tsx  OpsAnalytics.tsx  RideComfort.tsx  RideConsole.tsx  SingaporePlaceField.tsx
apps/web/lib/: config.ts
deploy/ec2/: LETSENCRYPT.md  letsencrypt-bootstrap.sh  remote-install.sh  ride-comfort-api.service  ride-comfort.nginx.conf  trim-nginx-default.sh
