[project]
name = "ride-comfort-api"
version = "0.1.0"
description = "FastAPI service for ride comfort: Grab directions, segments, WebSocket scoring"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[tool.uv]
package = false
